fixed clip link jumping

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,11 +41,11 @@ body {
 @keyframes fade-in {
   0% { 
     opacity: 0; 
-    transform: translateX(-50%) translateY(5px);
+    margin-top: 5px;
   }
   100% { 
     opacity: 1; 
-    transform: translateX(-50%) translateY(0);
+    margin-top: 0;
   }
 }
 
